# georgian-hyphenation

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README-NPM.md  README-Pypi.md  README.md  build.js  generate-icons.html  package.json  pyproject.toml  requirements.txt  setup.py  test-suite.js  test.js  test_javascript.js  test_python.py  test_v2.py
browser-extension/: generate-icons.html  manifest.json  popup.html
browser-extension-chrome/: manifest.json  popup.html
browser-extension-chrome/js/: background.js  content.js  hyphenator.js  popup.js
browser-extension-firefox/: manifest.json  popup.html
browser-extension-firefox/js/: background.js  content.js  hyphenator.js  popup.js
browser-extension/js/: content.js  popup.js
data/: exceptions.json
docs/: index.html
src/georgian_hyphenation/: __init__.py  hyphenator.py  hyphenator.py.backup
src/javascript/: index.cjs  index.js
src/python/: __init__.py  hyphenator.py
tests/: test_basic.py
word-addin/: manifest.xml
word-addin/src/commands/: commands.html
word-addin/src/taskpane/: hyphenator.js  taskpane.css  taskpane.html  taskpane.js
wordpress-plugin/: georgian-hyphenation.php  readme.txt
