[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "georgian-hyphenation"
version = "2.0.1"
description = "Georgian Language Hyphenation Library v2.0 - Academic Logic"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Guram Zhgamadze", email = "guramzhgamadze@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/guramzhgamadze/georgian-hyphenation"